# generala_game

./: CMakeLists.txt  main.cpp
project/tasks/choose_who_start_first/: choose_who_start_first.cpp  choose_who_start_first.h
project/tasks/print_score_sheet/: print_score_sheet.cpp  print_score_sheet.h
